[project]
name = "slack-personal"
version = "0.1.0"
description = "Personal Slack workspace automation via session tokens (no app install)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "slacktokens>=0.2",
]

[project.scripts]
sg = "scripts.sg:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
